# databricks-on-boarding-fuichiro-nakae

./: .gitignore  CLAUDE.md  README.md  Taskfile.yaml  pyproject.toml
src/task1_playwright_scraping/: runner.py
src/task1_serverless_data_fetch/: __init__.py
src/task2_db_fetch/: __init__.py  runner.py
src/task2_playwright_db_fetch/: runner.py
terraform/envs/dev/: backend.tf  main.tf  variables.tf
terraform/envs/stg/: providers.tf  variables.tf
terraform/module/: databricks_job.tf  outputs.tf  variables.tf  versions.tf
tests/: test_task1.py  test_task2.py
